# live-music

./: .babelrc  .gitignore  Procfile.web  README.md  package-lock.json  package.json  pyproject.toml  runservers  server.js  webpack.config.js
core/: admin.py  forms.py  models.py  socketio.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_auto_20200815_1736.py  0002_auto_20200815_1917.py  0003_event_in_progress.py  0004_auto_20200819_1722.py  0005_auto_20200819_2057.py  0006_auto_20200820_0124.py  0007_auto_20200820_0343.py  0008_auto_20200820_1507.py  0009_auto_20200820_2236.py  0010_auto_20200823_0115.py  0010_musician_favorited_by.py  0011_merge_20200823_1745.py  0011_merge_20200823_1921.py  0012_merge_20200823_1946.py  0013_auto_20200823_2057.py  0014_auto_20200826_2020.py  0014_event_archive.py  0015_auto_20200827_1300.py  0016_event_genre.py  0016_event_viewers.py  0017_auto_20200829_1933.py  0018_merge_20200830_2143.py  0018_merge_20200831_0453.py  0018_merge_20200831_1041.py
project/: .env.sample  __init__.py  settings.py  storage_backends.py  urls.py  wsgi.py
react/: index.js
react/components/: Base.js  Event.js  Homepage.js
static/css/: style.css
templates/: base.html
templates/account/: login.html  logout.html  signup.html
templates/core/: about.html  create_event.html  donation_form.html  donation_tutorial.html  edit_event.html  edit_musician.html  event.html  event_add_edit.html  favorite_musicians.html  homepage.html  homepage_search.html  map.html  musician_form.html  show_musician.html
users/: models.py
(+6 files in other folders)
