[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.8.5"
django = "^3.0.6"
django-extensions = "^2.2.9"
django-debug-toolbar = "^2.2"
werkzeug = "^1.0.1"
django-environ = "^0.4.5"
psycopg2 = "^2.8.5"
django-heroku = "^0.3.1"
gunicorn = "^20.0.4"
django-allauth = "^0.42.0"
django-imagekit = "^4.0.2"
pillow = "^7.2.0"
python-socketio = "^4.6.0"
boto3 = "^1.14.43"
django-storages = "^1.9.1"
asgiref = "^3.2.10"
pytz = "^2020.1"
gevent = "^20.6.2"
django-crispy-forms = "^1.9.2"
django-social-share = "^2.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
